--- a/AluraStoreLatam.ipynb
+++ b/AluraStoreLatam.ipynb
@@ -1672,9 +1672,46 @@
         "id": "0tSdCie9ZQlt"
       },
       "source": [
-        ">Finalmente podemos determinar el pago por envío que se realiza es menor en relacion al ingreso obtenido, por lo que aunque la tirnda 1 genera mas costos por envío, se compensa totalmente con los ingreso que otorga, de tal forma que la ***tienda 1*** termina siendo la mejor valorada, en contraste la ***tienda 4*** es la tienda que genera menos costos por envíos genera, pero al mismo tiempo es la tienda que menos ingreso obtiene.\n",
+        ">Finalmente podemos determinar el pago por envío que se realiza es menor en relacion al ingreso obtenido, por lo que aunque la tirnda 1 genera mas costos por envío, se compensa totalmente con los ingreso que otorga, de tal forma que la ***tienda 1*** termina siendo la mejor valorada, en contraste la ***tienda 4*** es la tienda que genera menos costos por envíos genera, pero al mismo tiempo es la tienda que menos ingreso obtiene."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# 📊 Resumen del Análisis de Sucursales - Alura Store\n",
+        "## Características principales del análisis:\n",
+        "- Ingresos por ventas vs ingresos totales:\n",
+        "  \n",
+        "    Se identificó que no existe una diferencia significativa entre los ingresos de solo ventas y los ingresos totales (ventas + envíos).\n",
         "\n",
-        ">De a cuerdo a todo el análisis, considero que la sucursal que hay que vender es la tienda 4 "
+        "- Tienda con mayor y menor facturación:\n",
+        "\n",
+        "    - 🏆 Tienda 1 es la que más ingresos genera.\n",
+        "\n",
+        "    - 📉 Tienda 4 es la que menos ingresos aporta a la empresa.\n",
+        "\n",
+        "- Importancia de analizar la utilidad:\n",
+        "    Se destaca que no basta con evaluar únicamente el volumen de ventas; sería ideal considerar la utilidad por producto para identificar los productos más rentables.\n",
+        "\n",
+        "- Categorías más y menos rentables:\n",
+        "    - Más ingresos: Electrónicos, Electrodomésticos y Muebles.\n",
+        "    - Menos ingresos: Juguetes, Artículos para el hogar y Libros.\n",
+        "\n",
+        "- Ventas por unidades:\n",
+        "    Los productos más consumidos en cantidad son de las categorías Muebles, Electrónicos y Juguetes, reafirmando que Muebles y Electrónicos son clave tanto en cantidad como en ingresos.\n",
+        "\n",
+        "- Valoración de las sucursales:\n",
+        "    Las calificaciones de los clientes son muy similares entre tiendas, con variaciones mínimas (de apenas una décima).\n",
+        "\n",
+        "- Costos de envío:\n",
+        "    Aunque la Tienda 1 genera más costos por envíos, estos son justificados por sus elevados ingresos.\n",
+        "\n",
+        "    La Tienda 4 tiene los costos de envío más bajos, pero también los menores ingresos.\n",
+        "\n",
+        "## 📌 Conclusión final:\n",
+        "Tras analizar los ingresos, las ventas por unidades, las categorías más fuertes y el impacto de los costos de envío, la Tienda 4 resulta ser la menos eficiente y es la recomendación principal para ser vendida.\n",
+        "Esto se debe a su baja facturación, su menor volumen de ventas y su escaso impacto en el desempeño general de Alura Store."
       ]
     }
   ],
